# vulkan_c

./: .gitignore  CMakeLists.txt  README.md  analysis.txt  app  app:  firsttry  gmon.out  math.s  plan.txt  pulse  todo.txt
info/: vs.txt  windows command.txt
src/: .main.c.un~  app  app.c  aurora.c  aurora.h  aurora_config.c  aurora_config.h  aurora_internal.c  aurora_internal.h  aurora_internal_config.c  aurora_internal_config.h  aurora_internal_preferences.c  aurora_internal_preferences.h  aurora_internal_session.c  aurora_tree.c  aurora_tree.h  aurora_ui.c  aurora_ui_tree.c  aurora_vulkan.c  aurora_vulkan.h  file.c  firsttry.c  io.c  io.h  main.c  math.c  matrix.c  preferences.txt  pulse.c  pulse.h  render_pass.txt  shader.frag  shader.vert  testpulse.c  vec.c  vec.h
src/shader/: shader.frag  shader.vert
